# work-docs-library

./: .gitignore  AGENTS.md  DESIGN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  config.example.json  config.json  kimi.plugin.json  plugin.json  pyproject.toml  work-docs-library-comprehensive-report.md
scripts/: .env.example  admin_tools.py  agent_batch_helper.py  auto_batch_summarizer.py  doc_extractor.py  main.py  mcp_server.py  plugin_router.py  requirements.txt  run_local_pdf_parser_test.py
scripts/benchmark/: analyze_doc.py  collect_results.py  compare_regression.py  compute_ground_truth.py  diagnose_page.py  image_audit_hook.py  run_baseline.py  run_doc.sh  run_mineru_only.sh  run_phase1_bench.sh  run_pymupdf4llm.py  run_regression.sh  test_mp_find_tables_feasibility.py  visualize_diagnose.py
scripts/core/: __init__.py  agentic_search.py  api_client.py  batch_clients.py  bigmodel_parser_client.py  bridge.py  chapter_editor.py  compatibility_pipeline.py  config.py  context_manager.py  db.py  doc_graph_pipeline.py  embedding_client.py  enums.py  evaluation.py  flow_selector.py  graph_store.py  hybrid_retriever.py  knowledge_base_service.py  llm_api_pipeline.py  llm_chat_client.py  llm_client.py  models.py  pipeline.py  query_service.py  reranker.py  sparse_index.py  status_collector.py  usage_logger.py  vector_index.py
scripts/parsers/: __init__.py  borderless_table_extractor.py  gaps_first_scanner.py  image_utils.py  office_parser.py  pdf_parser.py  table_utils.py  unified_zone_recognition.py
scripts/prompts/: agentic_search_system.txt  summarize.txt  (+18 more)
(+65 files in other folders)
